always leave a gap for a secondary nav (bug 41568)
changing the style dynamically seems to cause issues rendering on
certain webkit phones

going forward we probably want to always show the secondary menu
in some form so I don't see this as a big deal

--- a/stylesheets/less/common/mf-navigation.less
+++ b/stylesheets/less/common/mf-navigation.less
@@ -469,7 +469,6 @@ body {
 }
 
 /* Page actions */
-@secondaryNavWidth: @searchBoxHeight;
 
 .hasSecondaryNav {
 
@@ -477,10 +476,6 @@ body {
 		#mw-mf-menu-page {
 			display: none;
 		}
-	}
-
-	#mw-mf-searchForm {
-		padding-right: @searchBarPaddingRight + @secondaryNavWidth;
 	}
 
 	#mw-mf-menu-page {
