--- a/stylesheets/less/modules/mf-search.less
+++ b/stylesheets/less/modules/mf-search.less
@@ -76,6 +76,11 @@ input.search {
 	}
 }
 
+body.beta {
+	#mw-mf-searchForm {
+		padding-right: @searchBarPaddingRight + @secondaryNavWidth;
+	}
+}
 
 #results {
 	display: none;
